feat: Actualizar estilos con imagen corporativa Agroseguro 2024
NUEVA ESTRUCTURA DE ESTILOS:
- src/styles/_variables.scss - Variables del sistema de diseño
- src/styles/_base.scss - Estilos base y mixins tipográficos

COLORES CORPORATIVOS:
- Verde principal: #587A43
- Rojo: #823D30
- Azul: #64848C
- Amarillo: #D4A574
- Sistema de grises: gray-25 a gray-900

TIPOGRAFÍA:
- Mulish (Google Fonts) como tipografía principal
- Pesos: 300-800

CARACTERÍSTICAS:
- CSS Custom Properties para uso en HTML
- Compatibilidad con nomenclatura anterior (-primary-green, etc.)
- Sistema de sombras: shadow-xs a shadow-xl
- Variables de layout: sidebar-width, header-height
- Clases de utilidad globales

ANGULAR.JSON:
- Añadido src/styles a includePaths para prioridad sobre node_modules

--- a/angular.json
+++ b/angular.json
@@ -103,6 +103,7 @@
             ],
             "stylePreprocessorOptions": {
               "includePaths": [
+                "src/styles",
                 "node_modules/@agroseguro/lib-ui-agroseguro/"
               ]
             },
@@ -137,6 +138,7 @@
             ],
             "stylePreprocessorOptions": {
               "includePaths": [
+                "src/styles",
                 "node_modules/@agroseguro/lib-ui-agroseguro/"
               ]
             },
